--- a/css/app.css
+++ b/css/app.css
@@ -5196,13 +5196,73 @@ header .nav-pills li.active a:hover {
   background: none;
   color: inherit;
 }
-.card-main {
+.card {
   background: #ffffff;
   border: 1px solid #e6e6e6;
   margin: -1px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.card-list {
+  margin-bottom: 55px;
+}
+.card-list h2 {
+  float: right;
+  padding: 5px 30px 5px 5px;
+  background: #222222;
+  color: #fff;
+  margin: 0;
+  font-size: 20px;
+  padding: 2px 78px 2px 25px;
+  -webkit-border-radius: 0 4px 0 0;
+  -moz-border-radius: 0 4px 0 0;
+  border-radius: 0 4px 0 0;
+}
+.card-list .btn-question {
+  float: left;
+  margin: 10px;
+}
+.card-list ul {
+  clear: both;
+  margin: 0 20px;
+  list-style: none;
+}
+.card-list ul li {
+  padding: 25px 58px 15px 15px;
+  border-bottom: 1px solid #e6e6e6;
+}
+.card-list ul li .item-action {
+  font-size: 14px;
+}
+.card-list ul li .item-title {
+  font-size: 16px;
+  font-weight: bold;
+}
+.card-list ul li .item-title a {
+  color: #222222;
+}
+.card-list ul li .item-context {
+  font-size: 12px;
+}
+.card-list ul li:last-child {
+  border-bottom: none;
+}
+.card-list .btn-more {
+  font-size: 14px;
+  width: 190px;
+  height: 20px;
+  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
+  display: block;
+  margin: 0 auto -20px;
+}
+.card-main {
+  margin-bottom: 100px;
 }
 .card-main .links {
   margin-top: 100px;
