--- a/css/app.css
+++ b/css/app.css
@@ -5332,8 +5332,8 @@ h4 {
 }
 .sidebar ul {
   clear: both;
-  margin-top: 60px;
   list-style: none;
+  margin: 60px 0 0;
 }
 .sidebar ul li {
   margin: 20px 0;
@@ -5357,6 +5357,23 @@ h4 {
 }
 .agenda-mini header h3 {
   float: right;
+  letter-spacing: 0;
+  font-weight: normal;
+  line-height: 1.5em;
+  margin: -5px 0 0;
+}
+.agenda-mini header h3 span {
+  display: block;
+  font-weight: 700;
+}
+.agenda-pie {
+  width: 88px;
+  height: 88px;
+  border: 1px solid #a9a6a6;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  margin: 20px auto;
 }
 .btn-question {
   float: left;
