--- a/css/app.css
+++ b/css/app.css
@@ -5130,6 +5130,34 @@ a.badge:hover {
   font-weight: normal;
   font-style: normal;
 }
+/* glue: 0.2.9 hash: 9a763df6e2 */
+.sprite-wiki,
+.sprite-website,
+.sprite-twitter,
+.sprite-facebook {
+  background-image: url('../img/sprites.png');
+  background-repeat: no-repeat;
+}
+.sprite-wiki {
+  background-position: 0px 0px;
+  width: 32px;
+  height: 34px;
+}
+.sprite-website {
+  background-position: -32px 0px;
+  width: 32px;
+  height: 34px;
+}
+.sprite-twitter {
+  background-position: -64px 0px;
+  width: 32px;
+  height: 34px;
+}
+.sprite-facebook {
+  background-position: 0px -34px;
+  width: 32px;
+  height: 34px;
+}
 @font-face {
   font-family: 'Alef';
   src: url('../font/Alef-regular.eot');
@@ -5176,9 +5204,22 @@ body {
   float: left;
   display: block;
 }
+#app-header #login > a:hover {
+  text-decoration: none;
+}
 #app-header #login .dropdown-menu {
   left: 0;
   right: auto;
+}
+#app-header #login .user-pic {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: 2px solid #5597c6;
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  overflow: hidden;
 }
 #app-header .nav-pills {
   margin-bottom: 0;
@@ -5358,6 +5399,16 @@ h4 {
   background: #92b2cc;
   color: #ffffff;
   border: 2px solid #4f81a9;
+}
+.card-main .social-details [class*=sprite] {
+  display: inline-block;
+  width: 32px;
+  height: 34px;
+  text-align: left;
+  direction: ltr;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .sidebar {
   background: #ffffff;
