--- a/css/app.css
+++ b/css/app.css
@@ -5300,6 +5300,10 @@ h4 {
   font-size: 12px;
   letter-spacing: 1px;
 }
+ul,
+ol {
+  margin: 0px 25px 10px 0px;
+}
 .card {
   background: #ffffff;
   border: 1px solid #e6e6e6;
