--- a/css/app.css
+++ b/css/app.css
@@ -5403,13 +5403,13 @@ ol {
 .card-list header:after {
   clear: both;
 }
+.card-list header h1,
 .card-list header h2 {
   float: right;
   padding: 5px 30px 5px 5px;
   background: #464545;
   color: #fff;
   margin: 0;
-  font-size: 20px;
   padding: 2px 78px 2px 25px;
   -webkit-border-radius: 0 4px 0 0;
   -moz-border-radius: 0 4px 0 0;
