--- a/css/app.css
+++ b/css/app.css
@@ -5585,7 +5585,7 @@ ol {
   position: absolute;
   top: 80px;
   width: 405px;
-  height: 208px;
+  height: 218px;
 }
 .card-party-members > div .party-member-photo .party-member-info .party-member-info-photo {
   position: absolute;
@@ -5598,13 +5598,22 @@ ol {
 .card-party-members > div .party-member-photo .party-member-info .party-member-info-text {
   height: 160px;
   border-bottom: 1px solid #e6e6e6;
+  padding-right: 160px;
+}
+.card-party-members > div .party-member-photo .party-member-info .party-member-info-text h3 {
+  font-size: 16px;
+  font-weight: 700;
 }
 .card-party-members > div .party-member-photo .party-member-info .party-member-info-links {
   height: 47px;
   background: #f6f6f6;
+  padding-right: 160px;
 }
 .card-party-members > div .party-member-photo:hover .party-member-info {
   display: block;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .card-party-members > div .party-member-photo:after {
   content: counter(memberNum);
