--- a/css/app.css
+++ b/css/app.css
@@ -5569,6 +5569,10 @@ ol {
   display: inline-block;
   margin: 9px;
 }
+.card-party-members > div .party-member-photo .party-member-extra {
+  font-size: 12px;
+  text-align: center;
+}
 .card-party-members > div .party-member-photo .party-member-info {
   background: #ffffff;
   border: 1px solid #e6e6e6;
@@ -5665,6 +5669,21 @@ ol {
 }
 .sidebar ul li:last-child {
   border-bottom: none;
+}
+.sidebar.sidebar-comments {
+  *zoom: 1;
+}
+.sidebar.sidebar-comments:before,
+.sidebar.sidebar-comments:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.sidebar.sidebar-comments:after {
+  clear: both;
+}
+.sidebar.sidebar-comments li {
+  padding: 20px 0;
 }
 .agenda-mini header {
   *zoom: 1;
@@ -5947,30 +5966,40 @@ ol {
 }
 .label.level6 {
   background-color: #b94a48;
+  font-size: 200%;
+  line-height: 200%;
 }
 .label.level6[href] {
   background-color: #953b39;
 }
 .label.level5 {
   background-color: #f89406;
+  font-size: 180%;
+  line-height: 180%;
 }
 .label.level5[href] {
   background-color: #c67605;
 }
 .label.level4 {
   background-color: #468847;
+  font-size: 160%;
+  line-height: 160%;
 }
 .label.level4[href] {
   background-color: #356635;
 }
 .label.level3 {
   background-color: #3a87ad;
+  font-size: 140%;
+  line-height: 140%;
 }
 .label.level3[href] {
   background-color: #2d6987;
 }
 .label.level2 {
   background-color: #333333;
+  font-size: 120%;
+  line-height: 120%;
 }
 .label.level2[href] {
   background-color: #1a1a1a;
