--- a/css/app.css
+++ b/css/app.css
@@ -5290,6 +5290,7 @@ body {
 #app-footer {
   border-top: 4px solid #222222;
   font-size: 14px;
+  background-color: #f5f5f5;
 }
 #app-footer .row {
   padding: 20px 0;
