--- a/css/app.css
+++ b/css/app.css
@@ -5291,6 +5291,8 @@ body {
   border-top: 4px solid #222222;
   font-size: 14px;
   background-color: #f5f5f5;
+  box-shadow: inset 1px 4px 9px -6px;
+  margin-top: 20px;
 }
 #app-footer .row {
   padding: 20px 0;
