--- a/css/app.css
+++ b/css/app.css
@@ -5186,8 +5186,18 @@ body {
 .text-center {
   text-align: center;
 }
-.numeric {
-  direction: ltr;
+.numeric,
+.progress {
+  position: relative;
+}
+.numeric .bar-label,
+.progress .bar-label {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 /* Add additional stylesheets below
 -------------------------------------------------- */
@@ -5457,8 +5467,15 @@ ol {
 .card-list ul li:last-child {
   border-bottom: none;
 }
+.card-list.compact ul li {
+  padding: 20px 0 15px 0;
+}
+.card-list.compact header h1,
+.card-list.compact header h2 {
+  padding: 5px 20px 5px 5px;
+}
 .card-main {
-  margin-bottom: 100px;
+  margin-bottom: 60px;
 }
 .card-main [class*='span'] {
   min-height: 245px;
@@ -5653,13 +5670,23 @@ ol {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-.card-party-members.numbered .party-member-photo:after,
-.card-party-members .party-member-name {
+.card-party-members.numbered .party-member-photo:after {
   content: counter(memberNum);
   position: absolute;
   bottom: 2px;
   left: 3px;
   color: white;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5), 1px -1px 0 rgba(0, 0, 0, 0.5), -1px 1px 0 rgba(0, 0, 0, 0.5), 1px 1px 0 rgba(0, 0, 0, 0.5);
+}
+.card-party-members .party-member-name {
+  position: absolute;
+  bottom: -7px;
+  left: 3px;
+  color: white;
+  line-height: 13px;
+  font-size: 13px;
+  text-align: left;
+  font-weight: bold;
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5), 1px -1px 0 rgba(0, 0, 0, 0.5), -1px 1px 0 rgba(0, 0, 0, 0.5), 1px 1px 0 rgba(0, 0, 0, 0.5);
 }
 .sidebar {
@@ -5720,6 +5747,25 @@ ol {
 }
 .sidebar.sidebar-comments li {
   padding: 20px 0;
+}
+.sidebar.sidebar-stats li {
+  *zoom: 1;
+}
+.sidebar.sidebar-stats li:before,
+.sidebar.sidebar-stats li:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.sidebar.sidebar-stats li:after {
+  clear: both;
+}
+.sidebar.sidebar-stats label {
+  display: block;
+  width: 60%;
+  float: right;
+  padding-left: 10px;
+  cursor: default;
 }
 .agenda-mini header {
   *zoom: 1;
@@ -5929,6 +5975,9 @@ ol {
 .btn-question:hover {
   color: #ffffff;
   background: #464545;
+}
+ul .btn-question {
+  float: none;
 }
 .btn-expand {
   font-size: 13px;
